twisted (20.3.0-7pexip11) pexip; urgency=medium

  * Initial bullseye build

 -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:43:00 +0100

twisted (20.3.0-7pexip10) pexip; urgency=medium

  * twisted.web.guard.BasicCredentialFactory: validate base64 characters

 -- Huw Jones <huw@pexip.com>  Tue, 15 Mar 2022 17:44:33 +0000

twisted (20.3.0-7pexip9) pexip; urgency=medium

  * twisted.internet.defer: fix extra diagnostics to aid debugging reactor stalls
    under python 3

 -- Huw Jones <huw@pexip.com>  Tue, 15 Mar 2022 15:30:53 +0000

twisted (20.3.0-7pexip8) pexip; urgency=medium

  * internet/glib: fix PyGIDeprecationWarnings

 -- Huw Jones <huw@pexip.com>  Tue, 15 Mar 2022 14:59:13 +0000

twisted (20.3.0-7pexip7) pexip; urgency=medium

  * twisted.internet.defer: add extra diagnostics to aid debugging reactor stalls

 -- Huw Jones <huw@pexip.com>  Tue, 1 Mar 2022 10:51:13 +0000

twisted (20.3.0-7pexip6) pexip; urgency=medium

  * twisted.internet.defer.returnValue: deprecate in favour of `return`

 -- Huw Jones <huw@pexip.com>  Mon, 14 Feb 2022 16:57:33 +0000

twisted (20.3.0-7pexip5) pexip; urgency=medium

  * twisted.protocols.tls: fix https://twistedmatrix.com/trac/ticket/9462

 -- Huw Jones <huw@pexip.com>  Thu, 2 Dec 2021 11:55:57 +0000

twisted (20.3.0-7pexip4) pexip; urgency=medium

  * twisted.web.resource: upgrade putChild type warning to raise TypeError

 -- Huw Jones <huw@pexip.com>  Fri, 26 Nov 2021 14:35:37 +0000

twisted (20.3.0-7pexip3) pexip; urgency=medium

  * twisted.internet.task: fix CooperativeTask in Python 3
    due to change in StopIteration behaviour

 -- Huw Jones <huw@pexip.com>  Wed, 21 Jul 2021 17:16:37 +0100

twisted (20.3.0-7pexip2) pexip; urgency=medium

  * twisted.web.resource.Resource inherit from object to 
    fix old-old-style class nonsense

 -- Huw Jones <huw@pexip.com>  Tue, 20 Jul 2021 11:52:35 +0100

twisted (20.3.0-7pexip1) pexip; urgency=medium

  * Bump version to 20.3.0-7pexip1
