@@ -1,2 +1,0 @@
-docs/conch/examples/
-docs/conch/howto/
