@@ -1,6 +1,0 @@
-# Override this error as the Google Analytics is part of a layout template
-# that is only used internally by the Twisted project to generate online
-# API documentation.
-python-twisted-core: privacy-breach-google-adsense usr/lib/python2.7/dist-packages/twisted/python/_pydoctortemplates/common.html
-python-twisted-core: privacy-breach-google-adsense usr/lib/python2.7/dist-packages/twisted/python/_pydoctortemplates/index.html
-python-twisted-core: privacy-breach-google-adsense usr/lib/python2.7/dist-packages/twisted/python/_pydoctortemplates/summary.html
