@@ -1,17 +1,0 @@
-#! /bin/sh
-
-set -e
-
-case "$1" in
-    remove|purge)
-	find /usr/lib/python2.*/*-packages/twisted/plugins \
-	    -name dropin.cache 2>/dev/null | xargs -r rm -f
-	for d in /usr/lib/python2.*/*-packages/twisted/plugins; do
-	    rmdir $d 2>/dev/null || true
-	done 
-	;;
-esac
-
-#DEBHELPER#
-
-exit 0
