@@ -1,3 +1,0 @@
-docs/mail/examples/
-docs/mail/tutorial/
-
