@@ -1,2 +1,0 @@
-docs/names/examples/
-docs/names/howto/
