@@ -1,2 +1,0 @@
-docs/web/examples/
-docs/web/howto/
