@@ -1,2 +1,0 @@
-docs/words/examples/
-docs/words/howto/
