@@ -1,7 +1,0 @@
-#! /bin/sh -e
-
-if [ ! -h /usr/share/doc/python-twisted ]; then
-    rm -rf /usr/share/doc/python-twisted
-fi
-
-#DEBHELPER#
