@@ -1,5 +1,0 @@
-#!/bin/sh -e
-
-chown nobody $AUTOPKGTEST_TMP
-cd $AUTOPKGTEST_TMP
-echo python2 -m twisted.trial --reporter=summary -e twisted | su -s /bin/sh nobody
